# regime-v2

./: .gitignore  BASELINE_PRE_PBO_FIX.md  Makefile  README.md  SETUP_AUTH_AND_EMAIL.md  pyproject.toml  requirements.txt  validation_report.md  validation_report_baseline_2000window.md
.github/workflows/: refresh-dashboard.yml
dashboard/: .gitignore  auth.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/components/: AssetDetail.tsx  AssetGrid.tsx  EquityChart.tsx  FreshnessChip.tsx  Providers.tsx  RegimeBadge.tsx  RegimeProbStack.tsx  RegimeTimelineChart.tsx  SignInButton.tsx  SubscribeButton.tsx  TopBar.tsx  TransitionHeatmap.tsx  (+1 more)
scripts/: build_dashboard_data.py  compute_regime.py  make_validation_report.py  regime-api.service  regime_api_server.py  send_regime_alerts.py  update_live_regime.py
src/: __init__.py
tests/: test_api_payload.py  test_change_detector.py  test_conformal.py  test_consensus.py  test_cost_model.py  test_cpcv_runner.py  test_cv_purged.py  test_deflated_sharpe.py  test_dispatcher.py  test_drift_monitor.py  test_features_v2.py  test_forward_filter.py  test_fusion_strategy.py  test_hsmm.py  test_ibkr_daily.py  test_intraday_rv.py  test_live_replay.py  test_meta_stacker.py  test_ms_garch.py  test_multi_asset.py  test_patchtst.py  test_price_features.py  test_regime_diagnostics.py  test_regime_xgboost.py  test_risk_layer.py  test_rule_baseline.py  test_transition_detector.py  test_transition_risk.py  test_triple_barrier.py  test_tvtp_msar.py  test_xgb_tuning.py
(+66 files in other folders)
